--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,99 @@ header div > #btncarrito {
     color: var(--header-button-mainColor);
 }
 
+/* INICIO Nuevo estilo para platos */
+fieldset {
+    margin: 5px auto 0px;
+    padding: 10px 15px;
+    width: calc(33.334% - 5px);
+    max-width: 300px;
+    display: inline-flex;
+    flex-wrap: nowrap;
+    border-radius: 5px;
+    border: 2px solid #089000;
+    background-color: #08900022;
+    cursor: pointer;
+    z-index: 0;
+}
+@media  screen and (max-width: 840px){
+    fieldset {
+        width: calc(50% - 2.5px);
+        max-width: 300px;
+    }  
+}
+@media  screen and (max-width: 480px){
+    fieldset {
+        width: 100%;
+        max-width: 300px;
+    }  
+}
+fieldset[quantity="0"] {
+    border: 2px solid #b1b1b1;
+    background-color: #b1b1b122;
+}
+fieldset[quantity="0"] legend {
+    background-image: linear-gradient(to bottom, transparent calc(50% - 1px), #b1b1b1 calc(50% - 1px));
+}
+fieldset legend {
+    position: relative;
+    padding: 2px;
+    border-radius: 10px;
+    text-align: right;
+    background-image: linear-gradient(to bottom, transparent calc(50% - 1px), #089000 calc(50% - 1px));
+    width: max-content;
+    cursor: default;
+    
+}
+fieldset legend div {
+    padding: 5px;
+    background-color: #fff;
+    border-radius: 8px;
+}
+fieldset legend div button {
+    cursor: pointer;
+    padding: 1px 6px;
+    font-size: medium;
+    border-radius: 10px;
+    border: none;
+    background-color: darkslategrey;
+    color: #fff;
+}
+fieldset legend div button:nth-child(1) {
+    background-color: #089000;
+}
+fieldset legend div button:nth-child(2) {
+    background-color: #6698ff;
+}
+fieldset legend div button:nth-child(3) {
+    background-color: #ff3b3b;
+}
+fieldset > table tbody tr td{
+    display: table-cell !important;
+}
+fieldset > table,
+fieldset > table tbody,
+fieldset > table tbody tr {
+    width: 100% !important;
+}
+fieldset > table td:nth-child(1) {
+    width: 100%;
+    text-align: left;
+    vertical-align: middle;
+}
+fieldset > table td:nth-child(2) p {
+    width: max-content;
+    text-align: right;
+    vertical-align: middle;
+    background-color: #6698ff;
+    border-radius: 15px;
+    padding: 4px 8px;
+    color: #fff;
+}
+fieldset > table td:nth-child(2) p::before {
+    content: 'S/ ';
+}
+
+/* FIN Nuevo estilo para platos */
 main {
     border-top: 4px solid var(--main-title-background);
     background-color: var(--hmf-background);
@@ -70,7 +163,7 @@ main {
     border-radius: 5px;
 }
 
-main > div .title {
+#dishes > div > .title {
     background-color: var(--main-title-background);
     color: var(--main-title-color);
     padding: 5px 10px;
@@ -82,63 +175,91 @@ main > div .title {
     text-overflow: ellipsis;
     font-weight: bold;
 }
-main > div table {
-    width: 100%;
-    margin: 20px 0;
-    text-align: center;
+
+#dishes > div > .dishesContainer {
+    margin-top: 15px;
+    max-width: 1122px;
+    padding: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    font-family: 'Courier New', Courier, monospace;
+    
 }
-main > div table thead tr th {
-    background-color: var(--main-table-thead-background);
-    border-radius: 5px;
-    padding: 5px 10px;
-    color: var(--main-table-thead-color);
+
+#dishes > div > .dishesContainer > div {
+    position: relative;
+    margin: 5px;
+    max-width: 100%;
+    width: 360px;
+    height: max-content;
+    background-color: rgb(20, 20, 20);
+    border-radius: 5px 20px;
+    box-shadow: 2.5px 2.5px 5px grey;
+    border: 2px solid rgb(20, 20, 20);
 }
-main > div table tbody tr td {
-    padding: 5px 10px;
-    color: var(--main-table-tbody-color);
+
+#dishes > div > .dishesContainer > div > .botones {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 5px;
+    box-shadow: inset 2.5px 2.5px 5px grey;
+    border: 2px solid rgb(20, 20, 20);
 }
-main > div table tbody tr td > img {
-    width: 100px;
-    height: 60px;
-    border-radius: 5px;
-    object-fit: cover;
-    object-position: center center;
-    box-shadow: 2.5px 2.5px 5px var(--main-table-tbody-imgShadow);
-}
-main > div table tbody tr td > p {
-    width: max-content;
-    background-color: var(--main-table-tbody-price-background);
-    border-radius: 25px;
-    padding: 5px 10px;
-    color: var(--main-table-tbody-price-color);
-    margin: auto;
-}
-main > div table tbody tr td > p::before {
-    content: 'S/ ';
-}
-main > div table tbody tr td > button {
-    width: 25px;
-    height: 25px;
-    font-size: medium;
-    background-color: var(--main-table-tbody-orderButton-background);
-    outline: none;
-    border: 1px solid var(--main-table-tbody-orderButton-background);
-    border-radius: 25px;
-    color: var(--main-table-tbody-orderButton-color);
+
+#dishes > div > .dishesContainer > div > .botones > button {
+    border-radius: 15px;
+    padding: 1px 5px;
+    border: none;
+    background-color: grey;
+    color: #fff;
     cursor: pointer;
-    user-select: none;
+    box-shadow: 2.5px 2.5px 5px grey;
+    font-size: medium;
+    font-family: 'Courier New', Courier, monospace;
 }
-main > div table tbody tr td > input {
-    height: 25px;
-    width: 50px;
-    margin: 0 2.5px;
-    text-align: center;
-    outline: none;
-    border-radius: 5px;
-    background-color: var(--main-table-tbody-orderInput-background);
-    border: 1px solid var(--main-table-tbody-orderInput-border);
-    color: var(--main-table-tbody-orderInput-color);
+#dishes > div > .dishesContainer > div > .botones > button:nth-child(1) {
+    background-color: #089000;
 }
+#dishes > div > .dishesContainer > div > .botones > button:nth-child(2) {
+    background-color: #6698ff;
+}
+#dishes > div > .dishesContainer > div > .botones > button:nth-child(3) {
+    background-color: #ff3b3b;
+}
+
+#dishes > div > .dishesContainer > div > .contain > table {
+    border-spacing: 0;
+}
+
+#dishes > div > .dishesContainer > div > .contain > table > tbody > tr > td {
+    padding: 45px 10px 10px 10px;
+    color: #fff;
+    vertical-align: middle;
+}
+
+#dishes > div > .dishesContainer > div > .contain > table > tbody > tr > td:nth-child(1) {
+    border-radius: 3px 0 0 18px;
+    text-shadow: 0 0 10px black;
+    color: #fff;
+    width: 100%;
+    height: 2;
+    max-lines: 2;
+    min-lines: 2;
+}
+
+
+
+
+
+
+
+
+
 main > #divcarrito .title {
     background-color: var(--carrito-title-background);
     color: var(--carrito-title-color);
@@ -221,11 +342,111 @@ footer > ul li a {
     color: var(--main-table-tbody-orderButton-color);
 }
 
+#shower {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.85);
+    backdrop-filter: blur(4px);
+    cursor: pointer;
+}
+#shower > div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: default;
+    background-color: var(--hmf-background);
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px auto;
+    width: calc(95vw - 20px);
+    max-width: 480px;
+    text-align: center;
+}
+#shower > div > img {
+    width: 100%;
+    box-shadow: 0 0 10px var(--hmf-shadow);
+    border-radius: 5px;
+}
+#shower > div > h2 {
+    margin: 20px 0 40px;
+}
+#shower > div > div {
+    display: flex;
+}
+#shower > div > div > div {
+    width: 50%;
+    text-align: center;
+    align-content: center;
+    align-self: center;
+    align-items: center;
+}
+#precio > p {
+    font-size: medium;
+    font-weight: bold;
+    margin: auto;
+    padding: 6px 12px;
+    background-color: var(--main-table-tbody-price-background);
+    width: max-content;
+    border-radius: 15px;
+    color: var(--main-table-tbody-price-color);
+}
+#precio > p::before {
+    content: 'S/ ';
+}
+#order > button {
+    font-family: 'Courier New', Courier, monospace;
+    padding: 6px 10px;
+    font-size: medium;
+    border-radius: 15px;
+    border: none;
+    background-color: var(--main-table-tbody-orderButton-background);
+    color: var(--main-table-tbody-orderButton-color);
+    cursor: pointer;
+    outline: none;
+}
+#order > input {
+    padding: 6px 12px;
+    width: 60px;
+    border: 1px solid var(--main-table-tbody-orderInput-border);
+    border-radius: 5px;
+    outline: none;
+    text-align: center;
+}
+
+#accept, #cancel {
+    align-content: center;
+    padding: 6px 12px 6px 3px;
+    font-size: medium;
+    width: max-content;
+    margin: 40px auto 0;
+    border-radius: 5px;
+    border: 2px solid #059657;
+    background-color: #059657;
+    color: #ffffff;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+#accept > span {
+    background-color: #fff;
+    color: #059657;
+    padding: 4px 8px;
+    border-radius: 5px;
+    font-weight: bold;
+    margin-right: 10px;
+}
+#accept > span::before {
+    content: 'S/ ';
+}
+#cancel {
+    padding: 6px 12px;
+    background-color: #ff3b3b;
+    border-color: #ff3b3b;
+}
 @media screen and (max-width: 720px) {
-    main > div table tbody tr td:first-child,
-    main > div table thead tr th:first-child {
-        display: none;
-    }
     main > #divcarrito table tbody tr td:first-child,
     main > #divcarrito table thead tr th:first-child {
         display: block;
