--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,7 @@ main {
     border-radius: 5px;
 }
 
-#dishes > div > .title {
+#title {
     background-color: var(--main-title-background);
     color: var(--main-title-color);
     padding: 5px 10px;
@@ -175,6 +175,107 @@ main {
     text-overflow: ellipsis;
     font-weight: bold;
 }
+
+#dishes * {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+#dishes {
+    padding: 5px 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    height: max-content;
+}
+
+#dishes > .dishContainer {
+    position: relative;
+    margin: 10px;
+    max-width: 100%;
+    width: 240px;
+    border: 2px solid rgb(20, 20, 20);
+    border-radius: 5px;
+    box-shadow: 2.5px 2.5px 5px grey;
+    background: linear-gradient(to bottom,
+            rgba(20, 20, 20, 0.40) 40%,
+            rgb(20, 20, 20)), url('/files/maindata/prueba.jpg');
+    background-size: cover;
+    background-position: center center;
+}
+
+#dishes > .dishContainer>button[data-id="quantity"],
+#dishes > .dishContainer>button[data-id="remove"] {
+    display: none;
+    cursor: pointer;
+}
+
+#dishes > .dishContainer>button[data-id="quantity"].selected,
+#dishes > .dishContainer>button[data-id="remove"].selected {
+    display: unset;
+    position: absolute;
+    top: -4px;
+    padding: 1px 5px;
+    font-size: medium;
+    font-weight: bold;
+    border: 2px solid rgb(20, 20, 20);
+    color: #fff;
+}
+
+#dishes > .dishContainer>button[data-id="quantity"].selected {
+    right: 27px;
+    border-radius: 5px 1px 5px 10px;
+    background-color: #6698ff;
+}
+
+#dishes > .dishContainer>button[data-id="remove"].selected {
+    right: 2px;
+    border-radius: 1px 5px 10px 5px;
+    background-color: #ff3b3b;
+}
+
+#dishes > .dishContainer>table {
+    width: 100%;
+    height: 240px;
+    max-height: 120px;
+    border-spacing: 0;
+}
+
+#dishes > .dishContainer>table>tbody>tr>td {
+    padding: 5px;
+    vertical-align: bottom;
+    color: #fff;
+    font-weight: bold;
+    text-shadow: 0 0 5px rgb(20, 20, 20);
+}
+
+#dishes > .dishContainer>table>tbody>tr>td:nth-child(1) {
+    width: 100%;
+}
+
+#dishes > .dishContainer>table>tbody>tr>td:nth-child(2) button {
+    font-size: medium;
+    border: none;
+    border-radius: 5px;
+    background-color: transparent;
+    color: #fff;
+    font-weight: bold;
+    width: max-content;
+}
+
+#dishes > .dishContainer>table>tbody>tr>td:nth-child(2) button::before {
+    content: 'S/ ';
+}
+
+
+
+
+
+
+
+
+
+
 
 #dishes > div > .dishesContainer {
     margin-top: 15px;
