--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     font-family: var(--font);
     box-sizing: border-box;
-    transition: 0.3s;
+    /*transition: 0.3s;*/
 }
 
 body {
